# HCVXI

./: .gitignore  CMakeLists.txt  config.json
hwinfo/examples/: live_monitorMain.cpp
hwinfo/include/hwinfo/: ram.h
hwinfo/src/windows/: gpu.cpp  network.cpp  ram.cpp
src/: common.cpp  common.h  config.cpp  config.h  gui.cpp  logger.cpp  logger.h  main.cpp
web/: index.html
web/css/: style.css
web/js/: app.js  hw-render.js  keyboard.js  monitor.js  test-connectivity.js  test-framework.js  test-report.js  tests.js
